--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@styled/typescript-styled-plugin": "^1.0.1",
-    "typescript": "^5.4.2"
+    "@styled/typescript-styled-plugin": "^1.0.1"
   }
 }
