--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
-    "typescript": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@styled/typescript-styled-plugin": "^1.0.1"
+    "@styled/typescript-styled-plugin": "^1.0.1",
+    "typescript": "^5.4.3"
   }
 }
